Fix T62873 GPUShader: compile error (when clipping in viewport)

Props to @matc for the fix